Added A responsive layout for tablet

--- a/landing.html
+++ b/landing.html
@@ -32,15 +32,15 @@
           <div class="info">
             <i class="fa-regular fa-copyright"></i>
             <span class="top-text">2025</span><br>
-            <small>Crafting thoughtful digital experiences that are visually engaging and user-focused.</small>
+            <small class="sub-text">Crafting thoughtful digital experiences that are visually engaging and user-focused.</small>
           </div>
           <div class="info">
             <span class="top-text">Branding</span><br>
-            <small>Building strong, memorable digital identities that inspire, engage, and connect.</small>
+            <small class="sub-text">Building strong, memorable digital identities that inspire, engage, and connect.</small>
           </div>
           <div class="info">
             <span class="top-text">UI/UX</span><br>
-            <small>Designing intuitive, seamless, and engaging user experiences that delight, simplify, and empower.</small>
+            <small >Designing intuitive, seamless, and engaging wonderful user experiences.</small>
           </div>
         </div>
         <div class="footer-buttons">
