Added A about me section

--- a/landing.html
+++ b/landing.html
@@ -44,10 +44,34 @@
           </div>
         </div>
         <div class="footer-buttons">
-          <button>UI/UX DESIGN</button>
-          <button>GRAPHICS DESIGN</button>
-          <button>FRONT-END DEVELOPMENT</button>
-          <button>BRANDING</button>
+          <a href=""><button>UI/UX DESIGN</button></a>
+          <a href=""><button>GRAPHICS DESIGN</button></a>
+          <a href=""><button>FRONT-END DEVELOPMENT</button></a>
+          <a href=""><button>BRANDING</button></a>
+        </div>
+      </div>
+    </section>
+
+    <section class="about-me">
+      <div class="about-me-container">
+        <div class="left-side">
+          <div class="top-left"><h2>Designing with <span>Purpose</span>, Driven by <span>Creativity</span></h2>
+          </div>
+        </div>
+
+        <div class="right-side">
+          <p>I’m John Luis Nathaniel L. Mercado, a passionate <span>UI/UX</span> and <span>graphic designer</span> with over <span>2 years of experience</span>. I believe great design goes beyond aesthetics 
+          — it solves problems, connects with users, and brings ideas to life. Every project is an opportunity for me to create meaningful, user-centered experiences 
+          driven by creativity and purpose</p>
+          <div class="bottom-left-icons">
+            <a href="" class="socials-icon"><i class="fa-brands fa-github"></i></i></a>
+            <a href="" class="socials-icon"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="" class="socials-icon"><i class="fa-brands fa-instagram"></i></a>
+            <a href="" class="socials-icon"><i class="fa-brands fa-dribbble"></i></a>
+          </div>
+          <div class="cta-cv">
+            <a href=""><button>Download CV</button></a>
+          </div>
         </div>
       </div>
     </section>
