Added 1 breakpoint and responsive layout for tablet

--- a/landing.html
+++ b/landing.html
@@ -40,7 +40,7 @@
           </div>
           <div class="info">
             <span class="top-text">UI/UX</span><br>
-            <small >Designing intuitive, seamless, and engaging wonderful user experiences.</small>
+            <small class="sub-text">Designing intuitive, seamless, and engaging wonderful user experiences.</small>
           </div>
         </div>
         <div class="footer-buttons">
@@ -63,11 +63,11 @@
           <p>I’m John Luis Nathaniel L. Mercado, a passionate <span>UI/UX</span> and <span>graphic designer</span> with over <span>2 years of experience</span>. I believe great design goes beyond aesthetics 
           — it solves problems, connects with users, and brings ideas to life. Every project is an opportunity for me to create meaningful, user-centered experiences 
           driven by creativity and purpose</p>
-          <div class="bottom-left-icons">
-            <a href="" class="socials-icon"><i class="fa-brands fa-github"></i></i></a>
-            <a href="" class="socials-icon"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="" class="socials-icon"><i class="fa-brands fa-instagram"></i></a>
-            <a href="" class="socials-icon"><i class="fa-brands fa-dribbble"></i></a>
+          <div class="bottom-right-icons">
+            <a href="https://github.com/Maydoughrima" class="socials-icon"><i class="fa-brands fa-github"></i></i></a>
+            <a href="https://www.linkedin.com/in/john-luis-nathaniel-mercado-98b1a5298" class="socials-icon"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/maydoughrima/" class="socials-icon"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://dribbble.com/LuisNathaniel" class="socials-icon"><i class="fa-brands fa-dribbble"></i></a>
           </div>
           <div class="cta-cv">
             <a href=""><button>Download CV</button></a>
