--- a/landing.html
+++ b/landing.html
@@ -13,7 +13,7 @@
 <nav class="navbar">
     <div class="logo-group">
       <div class="logo-text">John Luis</div>
-      <div class="status-badge">Available</div>
+      <a href="" class="sb"><div class="status-badge">Available</div></a>
     </div>
     <div class="cta-bar">
       <h3>Menu</h3>
