Added a Unfinished Works =)

--- a/landing.html
+++ b/landing.html
@@ -51,30 +51,48 @@
         </div>
       </div>
     </section>
-
-    <section class="about-me">
-      <div class="about-me-container">
-        <div class="left-side">
-          <div class="top-left"><h2>Designing with <span>Purpose</span>, Driven by <span>Creativity</span></h2>
-          </div>
-        </div>
-
-        <div class="right-side">
-          <p>I’m John Luis Nathaniel L. Mercado, a passionate <span>UI/UX</span> and <span>graphic designer</span> with over <span>2 years of experience</span>. I believe great design goes beyond aesthetics 
-          — it solves problems, connects with users, and brings ideas to life. Every project is an opportunity for me to create meaningful, user-centered experiences 
-          driven by creativity and purpose</p>
-          <div class="bottom-right-icons">
-            <a href="https://github.com/Maydoughrima" class="socials-icon"><i class="fa-brands fa-github"></i></i></a>
-            <a href="https://www.linkedin.com/in/john-luis-nathaniel-mercado-98b1a5298" class="socials-icon"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/maydoughrima/" class="socials-icon"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://dribbble.com/LuisNathaniel" class="socials-icon"><i class="fa-brands fa-dribbble"></i></a>
-          </div>
-          <div class="cta-cv">
-            <a href=""><button>Download CV</button></a>
-          </div>
-        </div>
-      </div>
-    </section>
   </main>
-</body>
+        <section class="about-me">
+          <div class="about-me-container">
+             <div class="left-side">
+                <div class="top-left"><h2>Designing with <span>Purpose</span>, Driven by <span>Creativity</span></h2>
+                </div>
+              </div>
+
+            <div class="right-side">
+              <p>I’m John Luis Nathaniel L. Mercado, a passionate <span>UI/UX</span> and <span>graphic designer</span> with over <span>2 years of experience</span>. I believe great design goes beyond aesthetics 
+              — it solves problems, connects with users, and brings ideas to life. Every project is an opportunity for me to create meaningful, user-centered experiences 
+               driven by creativity and purpose</p>
+                <div class="bottom-right-icons">
+                  <a href="https://github.com/Maydoughrima" class="socials-icon"><i class="fa-brands fa-github"></i></i></a>
+                  <a href="https://www.linkedin.com/in/john-luis-nathaniel-mercado-98b1a5298" class="socials-icon"><i class="fa-brands fa-linkedin"></i></a>
+                   <a href="https://www.instagram.com/maydoughrima/" class="socials-icon"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="https://dribbble.com/LuisNathaniel" class="socials-icon"><i class="fa-brands fa-dribbble"></i></a>
+                </div>
+                  <div class="cta-cv">
+                    <a href=""><button>Download CV</button></a>
+                  </div>
+              </div>
+            </div>
+        </section>
+          <section class="Works">
+              <div class="works-container">
+                  <div class="works-header">
+                    <h2>Works</h2>
+                  </div>
+                  <div class="cards-container">
+                    <div class="works-cards">
+                    <div class="card-img">
+                      <img src="images/SMART-HARD-HAT.png" alt="SMART-HARD-HAT">
+                    </div>
+                    <div class="project-name"><h3>Smart Hard Hat</h3></div>
+                    <div class="project-details">A clean, responsive web dashboard that shows real-time health and environmental data from the Smart Hard Hat for quick, remote monitoring during emergencies.</div>
+                    <div class="cards-cta">
+                      <a href="#"><div>View Project</div></a>
+                    </div>
+                  </div>
+                  </div>
+              </div>
+          </section>
+  </body>
 </html>
