Added a complete work section but there is still issue on responsive

--- a/landing.html
+++ b/landing.html
@@ -24,7 +24,7 @@
   <main class="container">
     <section class="hero-container">
       <div class="hero-img">
-        <img src="images/494340397_670187805845205_1210805838432081645_n-removebg-preview.png" alt="John Luis">
+        <img src="images/HERO.png" alt="John Luis">
       </div>
       <div class="text-area">
         <h1>John Luis</h1>
@@ -87,6 +87,46 @@
                     </div>
                     <div class="project-name"><h3>Smart Hard Hat</h3></div>
                     <div class="project-details">A clean, responsive web dashboard that shows real-time health and environmental data from the Smart Hard Hat for quick, remote monitoring during emergencies.</div>
+                    <div class="cards-cta">
+                      <a href="#"><div>View Project</div></a>
+                    </div>
+                  </div>
+                  <div class="works-cards">
+                    <div class="card-img">
+                      <img src="images/UMTCWEB.png" alt="SMART-HARD-HAT">
+                    </div>
+                    <div class="project-name"><h3>UMTC-FC</h3></div>
+                    <div class="project-details">A modern, mobile-friendly website designed to highlight UMTC-FC's journey, featuring team profiles, schedules, and dynamic updates for every supporter.</div>
+                    <div class="cards-cta">
+                      <a href="#"><div>View Project</div></a>
+                    </div>
+                  </div>
+                  <div class="works-cards">
+                    <div class="card-img">
+                      <img src="images/SIXWORLD.png" alt="SMART-HARD-HAT">
+                    </div>
+                    <div class="project-name"><h3>SIXWORLD</h3></div>
+                    <div class="project-details">An engaging, travel-focused website built to inspire exploration, featuring curated destinations, trip guides, and vibrant visuals for thrill-seekers and adventurers alike.</div>
+                    <div class="cards-cta">
+                      <a href="#"><div>View Project</div></a>
+                    </div>
+                  </div>
+                  <div class="works-cards">
+                    <div class="card-img">
+                      <img src="images/robsy.png" alt="SMART-HARD-HAT">
+                    </div>
+                    <div class="project-name"><h3>ROBSY D ROBOT</h3></div>
+                    <div class="project-details">A futuristic movie poster showcasing Robsy D Robot, a rogue machine on a mission to find purpose and challenge a world dominated by AI.</div>
+                    <div class="cards-cta">
+                      <a href="#"><div>View Project</div></a>
+                    </div>
+                  </div>
+                   <div class="works-cards">
+                    <div class="card-img">
+                      <img src="images/DWIGHTS.png" alt="SMART-HARD-HAT">
+                    </div>
+                    <div class="project-name"><h3>FOOD POSTER</h3></div>
+                    <div class="project-details">A mouthwatering steakhouse poster featuring sizzling premium cuts, smoky flavors, and hearty meals crafted to satisfy every craving of true meat enthusiasts.</div>
                     <div class="cards-cta">
                       <a href="#"><div>View Project</div></a>
                     </div>
