works complete and a new skills section also complete

--- a/landing.html
+++ b/landing.html
@@ -60,7 +60,7 @@
               </div>
 
             <div class="right-side">
-              <p>I’m John Luis Nathaniel L. Mercado, a passionate <span>UI/UX</span> and <span>graphic designer</span> with over <span>2 years of experience</span>. I believe great design goes beyond aesthetics 
+              <p>I’m John Luis Nathaniel L. Mercado, a passionate <span>UI/UX</span>,<span>Front-End Web Developer</span> and <span>Graphic designer</span> with over <span>2 years of experience</span>. I believe great design goes beyond aesthetics 
               — it solves problems, connects with users, and brings ideas to life. Every project is an opportunity for me to create meaningful, user-centered experiences 
                driven by creativity and purpose</p>
                 <div class="bottom-right-icons">
@@ -134,5 +134,67 @@
                   </div>
               </div>
           </section>
+         <section class="Skills-Section"> 
+  <div class="skills-container">
+    <div class="skills-header">
+      <h2>Skills</h2>
+    </div>
+    <div class="skills-section">
+      <div class="skills-column">
+        <div class="skill">
+          <div class="skill-label"><span>UI DESIGN</span><span>100%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 100%;"></div></div>
+        </div>
+
+        <div class="skill">
+          <div class="skill-label"><span>UX RESEARCH</span><span>95%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 95%;"></div></div>
+        </div>
+
+        <div class="skill">
+          <div class="skill-label"><span>FRONT-END DEVELOPMENT</span><span>90%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 90%;"></div></div>
+        </div>
+
+        <div class="skill">
+          <div class="skill-label"><span>GRAPHICS DESIGN</span><span>95%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 85%;"></div></div>
+        </div>
+         <div class="skill">
+          <div class="skill-label"><span>HTML</span><span>95%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 85%;"></div></div>
+        </div>
+      </div>
+
+      <div class="skills-column">
+        <div class="skill">
+          <div class="skill-label"><span>CSS</span><span>90%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 100%;"></div></div>
+        </div>
+
+        <div class="skill">
+          <div class="skill-label"><span>JAVSCRIPT</span><span>80%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 95%;"></div></div>
+        </div>
+
+        <div class="skill">
+          <div class="skill-label"><span>FIGMA</span><span>100%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 90%;"></div></div>
+        </div>
+
+        <div class="skill">
+          <div class="skill-label"><span>ADOBE PHOTOSHOP</span><span>95%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 85%;"></div></div>
+        </div>
+         <div class="skill">
+          <div class="skill-label"><span>ADOBE ILLUSTRATOR</span><span>85%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 85%;"></div></div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+  <script src="jvs.js"></script>
   </body>
 </html>
