Added a Services section but it aint fully responsive yet

--- a/landing.html
+++ b/landing.html
@@ -157,34 +157,34 @@
         </div>
 
         <div class="skill">
-          <div class="skill-label"><span>GRAPHICS DESIGN</span><span>95%</span></div>
+          <div class="skill-label"><span>GRAPHICS DESIGN</span><span>85%</span></div>
           <div class="progress-bar"><div class="progress" style="width: 85%;"></div></div>
         </div>
          <div class="skill">
-          <div class="skill-label"><span>HTML</span><span>95%</span></div>
-          <div class="progress-bar"><div class="progress" style="width: 85%;"></div></div>
+          <div class="skill-label"><span>HTML</span><span>90%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 90%;"></div></div>
         </div>
       </div>
 
       <div class="skills-column">
         <div class="skill">
-          <div class="skill-label"><span>CSS</span><span>90%</span></div>
-          <div class="progress-bar"><div class="progress" style="width: 100%;"></div></div>
-        </div>
-
-        <div class="skill">
-          <div class="skill-label"><span>JAVSCRIPT</span><span>80%</span></div>
+          <div class="skill-label"><span>CSS</span><span>95%</span></div>
           <div class="progress-bar"><div class="progress" style="width: 95%;"></div></div>
         </div>
 
         <div class="skill">
+          <div class="skill-label"><span>JAVSCRIPT</span><span>80%</span></div>
+          <div class="progress-bar"><div class="progress" style="width: 80%;"></div></div>
+        </div>
+
+        <div class="skill">
           <div class="skill-label"><span>FIGMA</span><span>100%</span></div>
-          <div class="progress-bar"><div class="progress" style="width: 90%;"></div></div>
+          <div class="progress-bar"><div class="progress" style="width: 100%;"></div></div>
         </div>
 
         <div class="skill">
           <div class="skill-label"><span>ADOBE PHOTOSHOP</span><span>95%</span></div>
-          <div class="progress-bar"><div class="progress" style="width: 85%;"></div></div>
+          <div class="progress-bar"><div class="progress" style="width: 95%;"></div></div>
         </div>
          <div class="skill">
           <div class="skill-label"><span>ADOBE ILLUSTRATOR</span><span>85%</span></div>
@@ -192,9 +192,40 @@
         </div>
       </div>
     </div>
-
   </div>
 </section>
+      <section class="Services-section">
+        <div class="services-container">
+          <div class="services-header">
+            <h2>My Services</h2>
+          </div>
+          <div class="card-container">
+            <div class="cards">
+              <div class="card-icon"><i class="fa-solid fa-palette"></i></div>
+              <div class="service-name"><h3>Graphics Design</h3></div>
+              <div class="service-description">Eye-catching visuals that reflect your brand from logos and jerseys to posters and pubmats designed to stand out across print and digital platforms, communicate clearly, and leave a lasting impression through thoughtful layout, color, and composition.</div>
+            </div>
+            <div class="cards">
+              <div class="card-icon"><i class="fa-solid fa-puzzle-piece"></i></div>
+              <div class="service-name"><h3>UI DESIGN</h3></div>
+              <div class="service-description">Intuitive interfaces that enhance user experience from mobile apps and websites to dashboards and prototypes designed to function seamlessly, guide interactions clearly, and deliver impactful results through thoughtful hierarchy, and responsiveness.</div>
+            </div>
+            <div class="cards">
+              <div class="card-icon"><i class="fa-solid fa-user"></i></div>
+              <div class="service-name"><h3>UX RESEARCH</h3></div>
+              <div class="service-description">User-focused research that uncovers real needs from interviews and surveys to usability tests and analytics designed to inform decisions, improve experiences, and ensure your product aligns with user behavior, expectations, goals, and intent.</div>
+            </div>
+            <div class="cards">
+              <div class="card-icon"><i class="fa-solid fa-code"></i></i></div>
+              <div class="service-name"><h3>WEB DESIGN</h3></div>
+              <div class="service-description">Responsive websites that bring your brand to life from landing pages and blogs to portfolios and e-commerce sites developed to perform smoothly across devices, load quickly, and engage users through clean code, modern design, and accessibility.</div>
+            </div>
+            <div class="services-cta-hmn">
+              <a href="#"><div>Hire Me Now</div></a>
+            </div>
+          </div>
+        </div>
+      </section>
   <script src="jvs.js"></script>
   </body>
 </html>
